# inline_hook

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
cmake/: FindLibZydis.cmake
include/: inline_hook.h  inlinehook.h  uhook.h
src/: arch_arm.c  arch_arm.h  arch_x86_64.c  arch_x86_64.h  defs.h  elfparser.c  elfparser.h  inline_hook.c  inlinehook.c  log.c  log.h  once.c  once.h  os_elf.c  os_elf.h  uhook.c
src/arch/: arm.c  x86_64.c
src/os/: elf.c  elf.h  elfparser.c  elfparser.h  os.c  os.h
test/: CMakeLists.txt  common.h  common.hpp  inline_callback.cpp  inline_loop.cpp  inline_shared.cpp  inline_simple.cpp  main.c  pltgot_malloc.cpp  pltgot_separation.cpp  pltgot_shared.cpp  separation.cpp  separation.hpp  springboard.cpp  springboard.hpp  test.h  test_callback.cpp  test_loop.cpp  test_simple.cpp
